﻿NeteXt'73 Changelog
-------------------------------------

v1.0.10
-	GRUB iommu on/off
-	wyłączenie iommu podczas instalacji kernela
-	warunek iommu tylko dla intela
v1.0.09
-	poprawki instalatora APM dla systemów z systemd
-	zmiana włączania/wyłączania ondemand
v1.0.08
-	zmiana kolejności poleceń przy włączaniu init.d
-	poprawki w deinstalatorze APM
-	przywracanie profilu APM z configu po reinstalacji
-	przywracanie ondemand po usunięciu APM
-	integracja skryptu instalacji z procesem zmiany ustawień APM wg configu
v1.0.07
-	poprawki w sterowaniu APM
-	zapamiętywanie i przywracanie ustawień z configu APM
v1.0.06
-	APM 5.1
-	sterowanie wentylatorami dla 14.04
-	podświetlenie dla samsunga
-	naprawa uśpienia Yoga
-	zmiana sterowania w APM
-	poprawki wykonywalności plików APM
-	przywracanie APM z configu po reinstalacji
v1.0.05
-	pierwsza instalacja gcc zaznaczone tylko gdy jest inny niż dostarczany
-	posortowana lista repozytoriów
-	nowe loga buldozer i piledriver
-	zmiana wyglądu okna zarządzania usługami systemd
-	sortowanie listy usług
-	nowe ikony dla kerneli premium
v1.0.04
-	dymek systemowy w trybie root
-	przebudowa zarządzania usługami dla systemd
-	zmiana sposobu sprawdzania APM - intel pstate
-	zmiana porządku ikon w kernelach premium
v1.0.03
-	walidacja wyboru profili APM
-	poprawka zarządzania usługami systemd
-	dymek kdialog dla kde
-	naprawa dymków yad dla kde
-	nowy dymek yad dla trybu root
v1.0.02
-	naprawa błędu krytycznego instalatora Radeona
-	poprawki tłumaczeń
-	zmiana timeout dla kerneli z 5 na 15
-	zmiana repo Chrome na arch=amd64
-	poprawka sprawdzania ostatniego wydania na kernel.org
-	drobne poprawki
v1.0.01
-	cron dla update'ów
-	KDE Connect Indicator dla Ubuntu
-	poprawka APM - desktop dla systemd
-	poprawka usuwania APM dla desktop
-	silvermont
-	nowe ikony celeron i atom
-	zmiany w skrypcie zamykania procesów zombie
v1.0.00
-	zatwierdzenie zmian
v0.9.99
-	poprawki literówek
-	poprawka sprawdzania usera dla dymku