@@ -15,6 +15,8 @@ GRAPHIC_KERNEL_DIR = kernel
 GRAPHIC_KERNEL_FILES = $(wildcard $(GRAPHIC_KERNEL_DIR)/*.desktop)
 GRAPHIC_KERNEL_PREMIUM_DIR = kernel-premium
 GRAPHIC_KERNEL_PREMIUM_FILES = $(wildcard $(GRAPHIC_KERNEL_PREMIUM_DIR)/*.desktop)
+GRAPHIC_KERNEL_PREMIUM_AMD_DIR = kernel-premium-amd
+GRAPHIC_KERNEL_PREMIUM_AMD_FILES = $(wildcard $(GRAPHIC_KERNEL_PREMIUM_AMD_DIR)/*.desktop)
 GRAPHIC_BASE_DIR = ikony
 GRAPHIC_BASE_FILES = $(wildcard $(GRAPHIC_BASE_DIR)/*.png)
 CONTACTS_DIR = kontakty
@@ -31,6 +33,7 @@ install: install_desktopfiles \
 	 install_desktopicons \
 	 install_desktopfiles_kernel \
 	 install_desktopfiles_kernel_premium \
+	 install_desktopfiles_kernel_premium_amd \
 	 install_contacts \
 	 install_menu \
 	 install_translations_files \
@@ -80,6 +83,9 @@ install_desktopfiles_kernel_premium:
 	$(MKDIR) -p $(DESTDIR)$(OPT_DIR)/$(PROG_NAME)/$(GRAPHIC_KERNEL_PREMIUM_DIR)/
 	$(INSTALL) 0755 $(GRAPHIC_KERNEL_PREMIUM_FILES) $(DESTDIR)$(OPT_DIR)/$(PROG_NAME)/$(GRAPHIC_KERNEL_PREMIUM_DIR)
 
+install_desktopfiles_kernel_premium_amd:
+	$(MKDIR) -p $(DESTDIR)$(OPT_DIR)/$(PROG_NAME)/$(GRAPHIC_KERNEL_PREMIUM_AMD_DIR)/
+	$(INSTALL) 0755 $(GRAPHIC_KERNEL_PREMIUM_AMD_FILES) $(DESTDIR)$(OPT_DIR)/$(PROG_NAME)/$(GRAPHIC_KERNEL_PREMIUM_DIR)
 install_contacts:
 	$(MKDIR) -p $(DESTDIR)$(OPT_DIR)/$(PROG_NAME)/$(CONTACTS_DIR)/
 	$(INSTALL) 0755 $(CONTACTS_FILES) $(DESTDIR)$(OPT_DIR)/$(PROG_NAME)/$(CONTACTS_DIR)
